# cs-assistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: ai.py  auth.py  tickets.py
src/app/core/: config.py  security.py
src/app/db/: session.py
src/app/models/: base.py  ticket.py  user.py
src/app/schemas/: ticket.py  user.py
src/app/services/: ai.py  ticket.py  user.py
